# slideshow-generator

./: .gitignore  Cargo.toml  README.md  generate_transition_demos.ps1
.github/workflows/: release.yml
examples/: comprehensive_transition_test.rs  library_usage.rs  practical_timing_test.rs  transition_demo.rs
scripts/: create_transition_collage.ps1
src/: gui.rs  lib.rs  main.rs
src/media/: image.rs  mod.rs  video.rs
src/slideshow/: generator.rs  mod.rs
src/transitions/: mod.rs
src/utils/: file_handler.rs
