[package]
name = "slideshow-generator"
version = "0.1.0"
edition = "2021"
authors = ["lifecodeof"]
description = "A Rust library and CLI tool for generating slideshow videos from images and videos"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lifecodeof/slideshow-generator"
keywords = ["slideshow", "ffmpeg", "cli", "gui", "library"]
categories = ["multimedia", "command-line-utilities", "gui"]
default-run = "slideshow-generator"

# Library configuration
[lib]
name = "slideshow_generator"
path = "src/lib.rs"

# Binary configuration
[[bin]]
name = "slideshow-generator"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "slideshow-generator-gui"
path = "src/gui.rs"
required-features = ["gui"]

[dependencies]
image = "0.24"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.10", optional = true }
eframe = { version = "0.25", optional = true }
egui = { version = "0.25", optional = true }
rfd = { version = "0.14", optional = true }
winapi = { version = "0.3", features = ["windef", "winuser"], optional = true }

[features]
default = []
cli = ["env_logger"]
gui = ["eframe", "egui", "rfd", "winapi", "env_logger"]

[dev-dependencies]
env_logger = "0.10"
